--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "psycopg[binary] (>=3.3.1,<4.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "alembic (>=1.17.2,<2.0.0)",
-    "python-dotenv (>=1.2.1,<2.0.0)"
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "pydantic[email] (>=2.12.5,<3.0.0)"
 ]
 
 
